2007-06-19  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_adj_bytes_allocd): Avoid (long) casts, fix comment.
	(GC_print_heap_sects): Use size_t instead of unsigned long.
	* thread_local_alloc.c (GC_lookup_thread): Define in the correct
	context.
	* win32_threads.c, include/gc_config_macros.h: The last of Romano
	Paolo Tenca's patch.  Move stdint.h include to gc_config_macros.h.
	* include/gc_inline.h: Avoid gc_priv.h dependencies.
	* tests/test.c (check_heap_stats): Replace unsigned long with size_t.

2007-06-12  Hans Boehm <Hans.Boehm@hp.com>

	* aclocal.m4: Regenerate to update date.

2007-06-10  Hans Boehm <Hans.Boehm@hp.com>

	* NT_X64_STATIC_THREADS_MAKEFILE: Replace obsolete -debugtype:cv.
	* mark_rts.c (GC_push_roots): Fix kind type.

2007-06-06  Hans Boehm <Hans.Boehm@hp.com>

	* doc/README.win64: New file.
	* doc/doc.am, Makefile.direct: Add README.win64.
	* Makefile.in: Regenerate.

2007-06-06  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am, Makefile.direct: Add NT_X64_STATIC_THREADS_MAKEFILE.
	* Makefile.in: Regenerate.
	* NT_X64_STATIC_THREADS_MAKEFILE: Fix warning flags.
	* allochblk.c, alloc.c, blacklst.c, dbg_malc.c, dyn_load.c,
	finalize.c, headers.c, mach_dep.c, malloc.c, mark.c, misc.c,
	obj_map.c, os_dep.c, ptr_chck.c, reclaim.c, typd_mlc.c,
	win32_threads.c, cord/de_win.c, include/gc_mark.h,
	include/private/gc_hdrs.h, include/private/gc_pmark.h,
	include/private/gc_priv.h, tests/test_cpp.cc:
	Replace old style function declarations.  Clean up integral types.
	Remove register declarations.  The change in malloc.c and the
	"int descr" declaration in mark.c are the most likely to have
	been real bugs outside of win64.
	* msvc_dbg.c: Disable on win64.
	* win32_threads.c: Add AMD64 support.
	* include/gc.h: no backtrace on AMD64 for now.

2007-06-06  Hans Boehm <Hans.Boehm@hp.com>

	* msvc_dbg.c(GetModuleBase): Replace strcat with strcat_s.

2007-06-06  Hans Boehm <Hans.Boehm@hp.com>
	